shesmu-server/src/test/resources/bad/ternaryif-result-types-not-matching.shesmu
Input gsi_std;

Run ok With { ok = (True ? 3 : "4") == 3  }
